<resources>
    <string name="app_name">FaceApp</string>
    <string name="login">로그인</string>
    <string name="email">이메일</string>
    <string name="fullName">Full Name</string>
    <string name="nickName">Nick Name</string>
    <string name="signUp">회원가입</string>
    <string name="next">다음</string>
    <string name="save">저장</string>
    <string name="write">글쓰기</string>
    <string name="passwordChange">비밀번호 변경</string>
    <string name="passwordConfirm">새로운 비밀번호를 입력해주세요.</string>
    <string name="emailCertify">이메일 인증</string>
    <string name="password">비밀번호</string>
    <string name="email_hint">이메일 입력</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_hint">제목을 입력해 주세요.</string>
    <string name="link_setting">링크는 , 으로 구분합니다.</string>
    <string name="tag_setting">태그는 # 으로 구분합니다.</string>
    <string name="tag">태그 입력</string>
    <string name="title">제목</string>
    <string name="link">링크 입력</string>
    <string name="gender">Gender</string>
    <string name="email_code">이메일 코드</string>
    <string name="account">계정 정보</string>
    <string name="network_failed">서버에서 도중에 오류가 발생했습니다.</string>
    <string name="check_failed">입력의 형식이 올바르지 않습니다.</string>
    <string name="empty">내용을 입력해 주세요.</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="about">About me</string>
    <string name="email_confirm">회원 가입 시 등록했던 이메일 입력시 , 비밀번호 변경 코드가 전송됩니다.</string>
    <string name="sign">다음으로 넘어가기 위해서는 이메일, 패스워드를 입력해 주세요.</string>
    <string name="check_confirm">계정을 생성하면 앱과 관련된 모든 약관을 자동으로 수락하게 됩니다.</string>
    <string name="password_find">비밀번호 찾기</string>
</resources>
