<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView android:layout_width="40dp"
                                                      android:layout_height="60dp"
                                                      app:layout_constraintLeft_toLeftOf="parent"
                                                      android:layout_marginStart="10dp"
                                                      android:layout_marginEnd="10dp"
                                                      app:layout_constraintTop_toTopOf="parent"
                                                      app:layout_constraintBottom_toTopOf="@+id/topBarrierView"
                                                      android:id="@+id/backIv"
                                                      android:padding="10dp"
                                                      android:src="@drawable/back"/>

        <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     android:text="@string/write"
                                                     android:id="@+id/titleTv"
                                                     app:layout_constraintLeft_toLeftOf="parent"
                                                     app:layout_constraintRight_toRightOf="parent"
                                                     app:layout_constraintTop_toTopOf="parent"
                                                     app:layout_constraintBottom_toTopOf="@+id/topBarrierView"
                                                     android:textSize="17sp"
                                                     android:textColor="@color/color_3f3f3f"/>

        <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                     android:layout_height="0dp"
                                                     app:layout_constraintRight_toRightOf="parent"
                                                     android:text="@string/save"
                                                     android:textSize="17sp"
                                                     android:id="@+id/saveTv"
                                                     android:textColor="@color/color_50BCDF"
                                                     android:paddingRight="15dp"
                                                     android:paddingLeft="15dp"
                                                     android:gravity="center"
                                                     app:layout_constraintTop_toTopOf="parent"
                                                     app:layout_constraintBottom_toTopOf="@+id/topBarrierView"
        />



        <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content"
                                                  android:layout_height="wrap_content"
                                                  app:barrierDirection="bottom"
                                                  android:id="@+id/topBarrierView"
                                                  app:constraint_referenced_ids="titleTv,backIv"
        />

        <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                     android:layout_height="wrap_content"
                                                     app:layout_constraintTop_toBottomOf="@+id/topBarrierView"
                                                     app:layout_constraintLeft_toLeftOf="parent"
                                                     android:textSize="13sp"
                                                     android:id="@+id/noticeTitleTv"
                                                     android:textColor="@color/color_3f3f3f"
                                                     android:text="@string/title"
                                                     android:layout_marginTop="30dp"
                                                     android:layout_marginStart="15dp"
                                                     android:layout_marginLeft="15dp"
        />

        <androidx.appcompat.widget.AppCompatEditText android:layout_width="0dp"
                                                     android:layout_height="wrap_content"
                                                     app:layout_constraintTop_toBottomOf="@+id/noticeTitleTv"
                                                     android:background="@null"
                                                     android:textColor="@color/color_3f3f3f"
                                                     android:textSize="18sp"
                                                     android:id="@+id/titleEt"
                                                     android:layout_marginTop="5dp"
                                                     app:layout_constraintRight_toLeftOf="@+id/writeIv"
                                                     android:layout_marginStart="15dp"
                                                     android:layout_marginLeft="15dp"
                                                     app:layout_constraintLeft_toLeftOf="parent"
                                                     android:hint="@string/title_hint"
        />

        <View android:layout_width="0dp"
              android:layout_height="0.7dp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginTop="15dp"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:id="@+id/titleView"
              app:layout_constraintTop_toBottomOf="@+id/titleEt"
              android:background="@color/color_efefef"
            />

        <androidx.appcompat.widget.AppCompatImageView android:layout_width="70dp"
                                                      android:layout_height="0dp"
                                                      android:background="@color/color_efefef"
                                                      android:layout_marginRight="15dp"
                                                      android:id="@+id/writeIv"
                                                      android:scaleType="centerCrop"
                                                      app:layout_constraintRight_toRightOf="parent"
                                                      app:layout_constraintTop_toTopOf="@+id/noticeTitleTv"
                                                      app:layout_constraintBottom_toBottomOf="@+id/titleView"
        />


               <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                            android:layout_height="wrap_content"
                                                            app:layout_constraintTop_toBottomOf="@+id/titleView"
                                                            app:layout_constraintLeft_toLeftOf="parent"
                                                            android:textSize="13sp"
                                                            android:id="@+id/noticeTagTv"
                                                            android:textColor="@color/color_3f3f3f"
                                                            android:text="@string/tag"
                                                            android:layout_marginTop="15dp"
                                                            android:layout_marginStart="15dp"
                                                            android:layout_marginLeft="15dp"
               />
               <androidx.appcompat.widget.AppCompatEditText android:layout_width="0dp"
                                                     android:layout_height="wrap_content"
                                                     app:layout_constraintTop_toBottomOf="@+id/noticeTagTv"
                                                     android:background="@null"
                                                     android:textColor="@color/color_3f3f3f"
                                                     android:textSize="17sp"
                                                     android:id="@+id/tagEt"
                                                     android:layout_marginStart="15dp"
                                                     android:layout_marginLeft="15dp"
                                                     android:layout_marginEnd="15dp"
                                                     app:layout_constraintLeft_toLeftOf="parent"
                                                     android:layout_marginTop="5dp"
                                                     android:hint="@string/tag_setting"
                                                     app:layout_constraintRight_toRightOf="parent"
        />

        <View android:layout_width="0dp"
              android:layout_height="0.7dp"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginTop="15dp"
              android:layout_marginLeft="15dp"
              android:layout_marginRight="15dp"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:id="@+id/tagView"
              app:layout_constraintTop_toBottomOf="@+id/tagEt"
              android:background="@color/color_efefef"
        />

        <androidx.appcompat.widget.AppCompatEditText android:layout_width="0dp"
                                                     android:layout_height="0dp"
                                                     android:textSize="16sp"
                                                     android:id="@+id/contsEt"
                                                     android:layout_marginTop="15dp"
                                                     android:background="@null"
                                                     android:gravity="top|start"
                                                     android:layout_marginStart="15dp"
                                                     android:hint="@string/empty"
                                                     android:layout_marginEnd="15dp"
                                                     android:layout_marginBottom="15dp"
                                                     android:textColor="@color/color_3f3f3f"
                                                     app:layout_constraintLeft_toLeftOf="parent"
                                                     app:layout_constraintRight_toRightOf="parent"
                                                     app:layout_constraintTop_toBottomOf="@+id/tagView"
                                                     app:layout_constraintBottom_toBottomOf="parent"
        />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>